# opaque

./: .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: bump-version.yml  example-e2e-tests.yml  lint-and-format.yml  release.yml  tests.yml
examples/client-simple-vite/: package.json
examples/client-simple-webpack/: index.js  package.json
examples/client-with-password-reset/: index.js  package.json
examples/fullstack-e2e-encrypted-locker-nextjs/: package.json
examples/fullstack-e2e-encrypted-locker-nextjs/app/api/: db.ts
examples/fullstack-e2e-encrypted-locker-nextjs/app/api/login/finish/: route.ts
examples/fullstack-e2e-encrypted-locker-nextjs/app/api/login/start/: route.ts
examples/fullstack-e2e-encrypted-locker-nextjs/app/api/recovery/login/finish/: route.ts
examples/fullstack-e2e-encrypted-locker-nextjs/app/api/recovery/login/start/: route.ts
examples/fullstack-e2e-encrypted-locker-nextjs/app/utils/: client.ts  demoflow.ts
examples/fullstack-simple-nextjs/: package.json
examples/fullstack-simple-nextjs/app/: page.tsx
examples/fullstack-simple-nextjs/app/api/: db.ts
examples/fullstack-simple-nextjs/app/api/login/finish/: route.ts
examples/fullstack-simple-nextjs/app/api/register/start/: route.ts
examples/server-simple/: package.json
examples/server-simple/src/: server.js
examples/server-with-password-reset/: package.json
examples/server-with-password-reset/src/: server.js
src/: lib.rs
tests/: opaque.test.js
(+1 files in other folders)
