[package]
name = "opaque"
version = "0.8.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
p256 = ["dep:p256"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
opaque-ke = { version = "3.0.0-pre.5", features = [
    "argon2",
], path = "./tools/opaque-ke" }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.12", features = ["js", "wasm-bindgen"] }
argon2 = "0.5"
p256 = { version = "0.13", default-features = false, features = [
  "hash2curve",
  "voprf",
], optional = true }
base64 = "0.21.7"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.4.5", features = ["js"] }
js-sys = "0.3.67"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
